Added functionality to run multiple variant masks at once.

--- a/dxapp.json
+++ b/dxapp.json
@@ -7,14 +7,14 @@
   "openSource": true,
   "inputSpec": [
     {
-      "name": "association_tarball",
-      "label": "tarball of output from 'mergecollapsevariants'",
+      "name": "association_tarballs",
+      "label": "list of tarballs from 'mergecollapsevariants'",
       "class": "file",
       "optional": false,
       "patterns": [
         "*.tar.gz"
       ],
-      "help": "Path/hash to tarball of output from 'mergecollapsevariants'"
+      "help": "Path/hash to list file of mask tarballs from 'mergecollapsevariants'"
     },
     {
       "name": "phenofile",
@@ -146,6 +146,14 @@
       "optional": true,
       "default": null,
       "help": "Prefix to use for naming output tar file of association statistics. Default is to use the file name 'assoc_stats.tar.gz'"
+    },
+    {
+      "name": "run_marker_tests",
+      "label": "Run per-marker tests for requested tool(s) [false]?",
+      "class": "boolean",
+      "optional": true,
+      "default": false,
+      "help": "Run per-marker tests for requested tool(s) [false]? This could DRASTICALLY increase run-time."
     }
   ],
   "outputSpec": [
@@ -186,7 +194,7 @@
     "aws:eu-west-2": {
       "systemRequirements": {
         "*": {
-          "instanceType": "mem2_ssd1_v2_x32"
+          "instanceType": "mem3_ssd1_v2_x64"
         }
       }
     }
