--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "openSource": true,
   "inputSpec": [
     {
@@ -300,5 +300,8 @@
         }
       }
     }
-  }
+  },
+  "authorizedUsers": [
+    "org-mrc_epid_group_1_2"
+  ]
 }
