--- a/dxapp.json
+++ b/dxapp.json
@@ -56,8 +56,8 @@
         "package_manager": "pip"},
       {"name": "statsmodels",
       "package_manager":  "pip"},
-      {"name": "PyYAML",
-      "package_manager":  "pip"}
+      {"name": "burden",
+      "url":  }
     ]
   },
   "access": {
