--- a/dxapp.json
+++ b/dxapp.json
@@ -60,6 +60,16 @@
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-burden.git",
         "build_commands": "python3 setup.py install"
+      },
+      {"name": "phewas",
+        "package_manager": "git",
+        "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-phewas.git",
+        "build_commands": "python3 setup.py install"
+      },
+      {"name": "extract",
+        "package_manager": "git",
+        "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-extract.git",
+        "build_commands": "python3 setup.py install"
       }
     ]
   },
