--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "openSource": false,
   "inputSpec": [
     {
@@ -57,19 +57,28 @@
         "package_manager": "pip"},
       {"name": "statsmodels",
       "package_manager":  "pip"},
-      {"name": "burden",
+      {
+        "name": "burden",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-burden.git",
         "build_commands": "python3 setup.py install"
       },
-      {"name": "phewas",
+      {
+        "name": "phewas",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-phewas.git",
         "build_commands": "python3 setup.py install"
       },
-      {"name": "extract",
+      {
+        "name": "extract",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-extract.git",
+        "build_commands": "python3 setup.py install"
+      },
+      {
+        "name": "general_utilities",
+        "package_manager": "git",
+        "url":  "https://github.com/mrcepid-rap/general_utilities.git",
         "build_commands": "python3 setup.py install"
       }
     ]
