--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "openSource": false,
   "inputSpec": [
     {
@@ -63,19 +63,19 @@
         "name": "burden",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-burden.git",
-        "build_commands": "python3 setup.py install"
+        "build_commands": "pip3 install ."
       },
       {
         "name": "phewas",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-phewas.git",
-        "build_commands": "python3 setup.py install"
+        "build_commands": "pip3 install ."
       },
       {
         "name": "extract",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/mrcepid-runassociationtesting-extract.git",
-        "build_commands": "python3 setup.py install"
+        "build_commands": "pip3 install ."
       }
     ]
   },
