Changes to mrcepid-runassociationtesting.py
* Added module version printer to mrcepid-runassociationtesting.py
* Added the MRC Logger .log to the final tarball
* Added version numbers to dxapp.json for all module dependendencies

--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "openSource": false,
   "inputSpec": [
     {
@@ -73,24 +73,28 @@
         "name": "general_utilities",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/general_utilities.git",
+        "tag": "v1.2.1",
         "build_commands": "pip3 install ."
       },
       {
         "name": "burden",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/burden.git",
+        "tag": "v1.1.4",
         "build_commands": "pip3 install ."
       },
       {
         "name": "phewas",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/phewas.git",
+        "tag": "v1.0.1",
         "build_commands": "pip3 install ."
       },
       {
         "name": "extract",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/extract.git",
+        "tag": "v1.0.1",
         "build_commands": "pip3 install ."
       }
     ]
