--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "openSource": false,
   "inputSpec": [
     {
@@ -73,7 +73,7 @@
         "name": "general_utilities",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/general_utilities.git",
-        "tag": "test_subjob",
+        "tag": "v1.3.0",
         "build_commands": "pip3 install ."
       },
       {
