--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "openSource": false,
   "inputSpec": [
     {
@@ -70,24 +70,31 @@
     "assetDepends": [],
     "execDepends": [
       {
+        "name": "general_utilities",
+        "package_manager": "git",
+        "url":  "https://github.com/mrcepid-rap/general_utilities.git",
+        "tag": "v1.4.0",
+        "build_commands": "pip3 install ."
+      },
+      {
         "name": "burden",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/burden.git",
-        "tag": "v1.1.6",
+        "tag": "v1.1.7",
         "build_commands": "pip3 install ."
       },
       {
         "name": "phewas",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/phewas.git",
-        "tag": "v1.0.3",
+        "tag": "v1.0.4",
         "build_commands": "pip3 install ."
       },
       {
         "name": "extract",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/extract.git",
-        "tag": "v1.0.3",
+        "tag": "v1.0.4",
         "build_commands": "pip3 install ."
       }
     ]
