--- a/dxapp.json
+++ b/dxapp.json
@@ -3,7 +3,7 @@
   "title": "RunAssociationTesting",
   "summary": "Runs rare variant burden testing with various tools",
   "dxapi": "1.0.0",
-  "version": "1.4.10",
+  "version": "1.4.11",
   "openSource": false,
   "inputSpec": [
     {
@@ -70,10 +70,14 @@
     "assetDepends": [],
     "execDepends": [
       {
+        "name": "uv",
+        "package_manager": "pip"
+      },
+      {
         "name": "general_utilities",
         "package_manager": "git",
         "url":  "https://github.com/mrcepid-rap/general_utilities.git",
-        "tag": "v1.5.1",
+        "tag": "v1.5.2",
         "build_commands": "pip3 install ."
       },
       {
