--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mrcepid-runassociationtesting"
-version = "1.4.11"
+version = "1.4.13"
 description = "A DNANexus app to perform genetic association"
 readme = "Readme.md"
 requires-python = "~=3.8.10"
@@ -9,4 +9,4 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", tag = "v1.5.2" }
+general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", tag = "1.5.2" }
